<?xml version="1.0" encoding="utf-8"?>
<resources>

    <!-- Activities -->
    <string name="perfil">Perfil</string>
    <string name="modificarperfil">Modificar perfil</string>
    <string name="proximasasambleas">Próximas asambleas</string>
    <string name="nuevaasamblea">Nueva asamblea</string>
    <string name="estadisticas">Estadísticas</string>
    <string name="nuevogrupo">Nuevo grupo</string>
    <string name="chats">Chats</string>
    <!--  -->
    <string name="app_name">Appsamblea</string>
    <string name="entrar">Entrar</string>
    <string name="contraseñaOlvidada">¿Olvidó su contraseña?</string>
    <string name="registrarse">Registrarse</string>
    <string name="title_activity_perfil">Perfil</string>
    <string name="title_section1">Section 1</string>
    <string name="title_section2">Section 2</string>
    <string name="title_section3">Section 3</string>
    <string name="navigation_drawer_open">Abrir drawer</string>
    <string name="navigation_drawer_close">Cerrar drawer</string>
    <string name="action_example">Example action</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_modificar_perfil">Modificar perfil</string>
    <string name="title_activity_editar_perfil">Editar perfil</string>
    <string name="title_activity_proximas_asambleas">Proximas asambleas</string>
    <string name="title_activity_asamblea">Asamblea</string>
    <string name="title_activity_buscar_asamblea">Buscar asamblea</string>
    <string name="title_activity_organizacion">Organización</string>
    <string name="title_activity_grupo">Grupo</string>
    <string name="title_activity_buscar_organizacion">Buscar organización</string>
    <string name="title_activity_estadisticas">Estadísticas</string>
    <string name="title_activity_orden_dia">Orden del día</string>
    <string name="title_activity_acta">Acta</string>
    <string name="title_activity_documentos">Documentos</string>
    <string name="title_activity_ponencia">Ponencia</string>
    <string name="title_activity_invitar_asistentes">Invitar asistentes</string>
    <string name="title_activity_turnos_palabra">Turnos de palabra</string>
    <string name="title_activity_crear_votacion">Votaciones</string>
    <string name="pregunta">Pregunta</string>
    <string name="si">Sí</string>
    <string name="no">No</string>
    <string name="abstencion">Abstención</string>

    <!-- Próximas asambleas -->
    <string name="title_activity_crear_asamblea">Crear asamblea</string>
    <string name="title_activity_add_user">AddUser</string>
    <string name="title_activity_abandonar_asamblea">Abandonar asamblea</string>
    <string name="title_activity_new_edit_organizacion">Nueva Organización</string>

    <!--LoginActivity-->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Contraseña</string>
    <string name="action_sign_in">Entra o regístrate</string>
    <string name="action_sign_in_short">Entrar</string>
    <string name="register">Regístrate</string>

    <string name="error_invalid_email">Dirección de correo no válida</string>
    <string name="error_invalid_password">Contraseña demasiado corta</string>
    <string name="error_password_must_be_8_characters_long">La contraseña debe de tener 8 caracteres como mínimo</string>
    <string name="error_incorrect_password">Email o contraseña incorrecto</string>
    <string name="error_field_required">Debes rellenar este campo</string>
    <string name="error_passwords_are_not_the_same">Las contraseñas deben ser iguales</string>
    <string name="title_activity_registro">Registro</string>
    <string name="facebook_error_on_server">Error en el servidor</string>

    <!--RegistroActivity-->
    <string name="confirm_password">Confirmar contraseña</string>
    <string name="confirm_registration">Registrar</string>

    <!--AsambleaActivity-->
    <string name="asambleas_descripcion">Descripción</string>
    <string name="asamblea_organizacion_placeholder">Organizado por </string>
    <string name="lugar_icon_placeholder">Lugar</string>
    <string name="asamblea_lugar_placeholder">Palacio de Congresos de Granada</string>
    <string name="fecha_icon_placeholder">Fecha</string>
    <string name="asamblea_fecha_placeholder">23/01/2015</string>
    <string name="hora_icon_placeholder">Hora</string>
    <string name="asamblea_hora_placeholder">16:00</string>
    <string name="eliminarAsamblea">Eliminar asamblea</string>
    <string name="asamblea_descripcion_placeholder">Lorem ipsum ad his scripta blandit partiendo, eum fastidii accumsan euripidis in, eum liber hendrerit an. Qui ut wisi vocibus suscipiantur, quo dicit ridens inciderint id. Quo mundi lobortis reformidans eu, legimus senserit definiebas an eos. Eu sit tincidunt incorrupte definitionem, vis mutat affert percipit cu, eirmod consectetuer signiferumque eu per. In usu latine equidem dolores. Quo no falli viris intellegam, ut fugit veritus placerat per.</string>

    <!--OrdenDiaActivity-->
    <string name="ordenDelDia_placeholder_nombre_1">Renta</string>
    <string name="ordenDelDia_placeholder_descripcion_1">Hablaremos sobre la renta de las personas mayores.</string>
    <string name="ordenDelDia_placeholder_nombre_2">Organización</string>
    <string name="ordenDelDia_placeholder_descripcion_2">Hablaremos sobre la organización actual del grupo.</string>
    <string name="ordenDelDia_placeholder_nombre_3">Elecciones</string>
    <string name="ordenDelDia_placeholder_descripcion_3">Cada candidato a las elecciones para presidir al grupo expondrá brevemente por qué debemos elegirlo..</string>
    <string name="ordenDelDia_cumplido">Cumplido</string>
    
    <!--Preferencias-->
    <string name="preference_key_file">com.appsamblea.appsamblea.preferences</string>
    <string name="saved_email">email</string>
    <string name="saved_password">password</string>
    <string name="title_activity_votaciones">Votaciones</string>
    <string name="usuario_id">usuarioID</string>


    <!-- Grupo -->
    <string name="grupo_descripcion">Descripción</string>
    <string name="grupo_administrador">Administrador</string>
    <string name="grupo_integrantes">Integrantes</string>
    <string name="grupo_iralchat">Ir al chat</string>
    <string name="grupo_addintegrante">Añadir integrante</string>
    <string name="title_activity_votacion">Votacion</string>

    <string name="hello_world">Hello world!</string>
    <string name="bio">Biografía:</string>

    <!-- Votación -->
    <string name="votar">Votar</string>

    <!-- Crear Asamblea -->
    <string name="asambleaAbierta">Asamblea abierta</string>

    <!-- Turnos de palabra -->
    <string name="placeholder_imagen_contacto">ImagenContacto</string>

    <!-- Facebook -->
    <string name="facebook_app_id">1604568749755371</string>
    <string name="title_activity_crear_organizacion">CrearOrganizacion</string>

    <!-- Generales -->
    <string name="confirm">Confirmar</string>

</resources>
