<!-- A DrawerLayout is intended to be used as the top-level content view using match_parent for both width and height to consume the full space available. -->
<android.support.v4.widget.DrawerLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:id="@+id/drawer_layout"
    android:layout_width="match_parent" android:layout_height="match_parent"
    tools:context="cliente.appsamblea.activities.OrdenDiaActivity">

    <!-- As the main content view, the view below consumes the entire
         space available using match_parent in both dimensions. -->
    <FrameLayout android:id="@+id/container" android:layout_width="match_parent"
        android:layout_height="match_parent" >

        <LinearLayout
            android:orientation="vertical"
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:layout_marginLeft="0dp"
            android:layout_marginRight="0dp"
            android:paddingLeft="16dp"
            android:paddingRight="16dp">

            <LinearLayout
                android:orientation="vertical"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="top"
                android:layout_marginTop="8dp"
                android:layout_marginBottom="8dp">

                <FrameLayout
                    android:layout_width="fill_parent"
                    android:layout_height="fill_parent">

                    <CheckBox
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/ordenDelDia_cumplido"
                        android:id="@+id/checkBox"
                        android:layout_gravity="right|top"
                        android:checked="false" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textAppearance="?android:attr/textAppearanceMedium"
                        android:text="@string/ordenDelDia_placeholder_nombre_1"
                        android:id="@+id/textView2"
                        android:textStyle="bold"
                        android:layout_gravity="left|center_vertical" />
                </FrameLayout>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textAppearance="?android:attr/textAppearance"
                    android:text="@string/ordenDelDia_placeholder_descripcion_1"
                    android:id="@+id/textView4" />

            </LinearLayout>

            <LinearLayout
                android:orientation="vertical"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center|top"
                android:layout_marginTop="8dp"
                android:layout_marginBottom="8dp">

                <FrameLayout
                    android:layout_width="fill_parent"
                    android:layout_height="fill_parent" >

                    <CheckBox
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/ordenDelDia_cumplido"
                        android:id="@+id/checkBox2"
                        android:layout_gravity="right|top"
                        android:checked="false" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textAppearance="?android:attr/textAppearanceMedium"
                        android:text="@string/ordenDelDia_placeholder_nombre_2"
                        android:id="@+id/textView5"
                        android:textStyle="bold"
                        android:layout_gravity="left|center_vertical" />

                </FrameLayout>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textAppearance="?android:attr/textAppearance"
                    android:text="@string/ordenDelDia_placeholder_descripcion_2"
                    android:id="@+id/textView6" />

            </LinearLayout>

            <LinearLayout
                android:orientation="vertical"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center|top"
                android:layout_marginTop="8dp"
                android:layout_marginBottom="8dp">

                <FrameLayout
                    android:layout_width="fill_parent"
                    android:layout_height="fill_parent" >

                    <CheckBox
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/ordenDelDia_cumplido"
                        android:id="@+id/checkBox3"
                        android:layout_gravity="right|top"
                        android:checked="false" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textAppearance="?android:attr/textAppearanceMedium"
                        android:text="@string/ordenDelDia_placeholder_nombre_3"
                        android:id="@+id/textView7"
                        android:textStyle="bold"
                        android:layout_gravity="left|center_vertical" />

                </FrameLayout>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textAppearance="?android:attr/textAppearance"
                    android:text="@string/ordenDelDia_placeholder_descripcion_3"
                    android:id="@+id/textView8" />

            </LinearLayout>
        </LinearLayout>
    </FrameLayout>

</android.support.v4.widget.DrawerLayout>
